--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
+    "@types/styled-components-react-native": "^5.1.3",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.11.1"
+    "react-native-screens": "^3.11.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
