--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components-react-native": "^5.1.3",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-htmlview": "^0.16.0",
     "react-native-reanimated": "^2.4.1",
